fix: remove scrollbar (#831)

--- a/www/styles/page.css
+++ b/www/styles/page.css
@@ -70,7 +70,6 @@ h3 > a > span.icon {
   max-width: 100ch;
   height: 100%;
   min-height: calc(100vh - (70px + 6rem));
-  overflow: scroll;
   margin: auto;
   background-color: white;
   font-size: 1.2rem;
